--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Waves</title>
   </head>
-  <body class="bg-black text-white">
+  <body
+    class="bg-gray-100 text-black dark:bg-black dark:text-white transition-colors duration-300"
+  >
     <div id="root"></div>
     <div id="portal-root"></div>
     <script type="module" src="/src/main.jsx"></script>
