--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" translate="no">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google" content="notranslate" />
     <title>Waves</title>
   </head>
   <body
+    translate="no"
     class="bg-gray-200 text-black dark:bg-black dark:text-white transition-colors duration-300"
   >
     <div id="root"></div>
